--- a/js/index.html
+++ b/js/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel="stylesheet" href="css/index.css" />
+<script type="text/javascript" src="js/index.js" ></script>
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
 </head>
 <body>
+    <p class="desc">
+        abc()   //打印abc
+        function abc() {
+            console.info('abc');
+        }
 
+        abcd()  //abcd is not defined
+        abcd = ()=>{
+            console.info('abcd')
+        }
+    </p>
 </body>
 </html>
