js逻辑判断为null

--- a/js/index.html
+++ b/js/index.html
@@ -12,14 +12,16 @@
     <title>Title</title>
 </head>
 <script>
-   function goto(){
-       // window.location.href="stringArray.html";//可以返回
-       // window.navigate("stringArray.html");
+   function gotoArrayString(){
        self.location='stringArray.html';
+    }
+   function gotoNull(){
+       self.location='null.html';
     }
 </script>
 <body>
-<div class="goto" onclick="goto()">跳转到ArrayString</div>
+<div class="gotoArrayString" onclick="gotoArrayString()">跳转到ArrayString</div>
+<div class="gotoNull" onclick="gotoNull()">跳转到判断null</div>
     1、（）=》｛｝和普通方法区别
     <p class="desc">
         <span class="green">abc()</span>  <span class="red">//打印abc</span>
