--- a/js/index.html
+++ b/js/index.html
@@ -13,15 +13,19 @@
 </head>
 <script>
    function gotoArrayString(){
-       self.location='stringArray.html';
+       self.location='string.html';
     }
    function gotoNull(){
        self.location='null.html';
     }
+    function gotoArray(){
+       self.location='array.html';
+    }
 </script>
 <body>
-<div class="gotoArrayString" onclick="gotoArrayString()">跳转到ArrayString</div>
+<div class="gotoArrayString" onclick="gotoArrayString()">跳转到String</div>
 <div class="gotoNull" onclick="gotoNull()">跳转到判断null</div>
+<div class="gotoArray" onclick="gotoArray()">跳转到array</div>
     1、（）=》｛｝和普通方法区别
     <p class="desc">
         <span class="green">abc()</span>  <span class="red">//打印abc</span>
