--- a/js/array.html
+++ b/js/array.html
@@ -22,6 +22,58 @@
     a3[0] = 2;
     console.info(a4);// [1, 2]
     console.info(a5);// [1, 2]
+
+    const a6=['a','b','c','d','e','f'];
+    for (let index of a6.keys()) {
+        console.log(index);//0、1、2、3、4、5
+    }
+    for (let elem of a6.values()) {
+        console.log(elem);//a,b,c,d,e,f
+    }
+    for (let [index, elem] of a6.entries()) {
+        console.log(index, elem);//0 "a"  1 "b"  2 "c"  3 "d"  4 "e" 5 "f"
+    }
+
+    const a7=['a','b','c','d','e','f'];
+    console.info(a7.includes('a'))//true
+    console.info(a7.includes('abc'))//false
+
+    const a8 = ['a','b',10];
+    console.info(a8.join());//字符串a,b,10
+    console.info(a8.join('='));//字符串a=b=10
+
+    const a9 = ['a','b',10];
+    const s = 'abcde';
+    console.info(s.toUpperCase());//const s也可以改变
+    console.info(a9.pop());
+    console.info(a9);//const a9也可以改变
+
+    const a10 = ['a','b',10];
+    console.info("a10",a10.push('c'));//4，返回最新的长度
+    console.info(a10.push('d','e','f','g'));//10
+    console.info(a10);// ["a", "b", 10, "c", "d", "e", "f", "g"]
+
+    const a11 = ['a','b',10];
+    console.info("a11",a11.reverse());// [10, "b", "a"]直接返回结果
+    console.info("a11",a11);// [10, "b", "a"]
+
+    const a12 = ['a','b',10];
+    console.info("a12",a12.shift());// a，返回删除的那个，删除第一个
+    console.info("a12",a12);// ["b", 10]
+
+    const a13 = ['a','b','c','d','e'];
+    console.info("a13",a13.slice(2));// ["c", "d", "e"]
+    console.info("a13",a13.slice(2,4));// ["c", "d"]
+    console.info("a13",a13);//被裁剪的数组值没变["a", "b", "c", "d", "e"]
+
+    const a14 = ['a','b','c','d'];
+    console.info("a14",a14.splice(1,3,'jia'));//["b", "c", "d"]，返回删除元素；从1开始，删3个，增加一个jia，
+    console.info("a14",a14);//["a", "jia"]已经被splice截取
+
+    const a15 = ['a','b','c','d'];
+    console.info("a15",a15.unshift('jia','jia','jia','jia'));//8 返回数组长度,可以无限加
+    console.info("a15",a15)// ["jia", "jia", "jia", "jia", "a", "b", "c", "d"]
+
 </script>
 <body>
     <p class="desc">
@@ -42,6 +94,64 @@
         a3[0] = 2;
         console.info(a4);<span class="red">//[1, 2]</span>
         console.info(a5);<span class="red">// [1, 2]</span>
+    </p>
+    <p class="desc">
+        const a6=['a','b','c','d','e','f'];
+        for (let index of a6.<span class="red">keys()</span>) {
+        console.log(index);<span class="red">//0、1、2、3、4、5</span>
+        }
+        for (let elem of a6.<span class="red">values()</span>) {
+        console.log(elem);<span class="red">//a,b,c,d,e,f</span>
+        }
+        for (let [index, elem] of a6.<span class="red">entries()</span>) {
+        console.log(index, elem);<span class="red">//0 "a"  1 "b"  2 "c"  3 "d"  4 "e" 5 "f"</span>
+        }
+    </p>
+    <p class="desc">
+        const a7=['a','b','c','d','e','f'];
+        console.info(a7.<span class="red">includes('a')</span>)//true
+        console.info(a7.<span class="red">includes('abc')</span>)//false
+        }
+    </p>
+    <p class="desc">
+        const a9 = ['a','b',10];
+        console.info(a9.<span class="red">pop());//10,返回删除的那个</span>
+        console.info(a9);<span class="red">//["a", "b"] const a9也可以改变</span>
+
+        const s = 'abcde';
+        console.info(s.<span class="red">toUpperCase());//ABCD const s也可以改变</span>
+    </p>
+    <p class="desc">
+        const a10 = ['a','b',10];
+        console.info("a10",a10.<span class="red">push('c'));//4，返回最新的长度</span>
+        console.info(a10.<span class="red">push('d','e','f','g'));//8</span>
+        console.info(a10);<span class="red">// ["a", "b", 10, "c", "d", "e", "f", "g"]</span>
+    </p>
+    <p class="desc">
+        const a11 = ['a','b',10];
+        console.info("a11",a11.<span class="red">reverse());// [10, "b", "a"]直接返回结果</span>
+        console.info("a11",<span class="red">a11);// [10, "b", "a"]</span>
+    </p>
+    <p class="desc">
+        const a12 = ['a','b',10];
+        console.info("a12",a12.<span class="red">shift());// a，返回删除的那个，删除第一个</span>
+        console.info("a12",<span class="red">a12);// ["b", 10]</span>
+    </p>
+    <p class="desc">
+        const a13 = ['a','b','c','d','e'];
+        console.info("a13",a13.<span class="red">slice(2));// ["c", "d", "e"]</span>
+        console.info("a13",a13.<span class="red">slice(2,4));// ["c", "d"]</span>
+        console.info("a13",a13);<span class="red">//被裁剪的数组值没变["a", "b", "c", "d", "e"]</span>
+    </p>
+    <p class="desc">
+        const a14 = ['a','b','c','d'];
+        console.info("a14",a14.<span class="red">splice(1,3,'jia'));//["b", "c", "d"]，返回删除元素；从1开始，删3个，增加一个jia，</span>
+        console.info("a14",a14);<span class="red">//["a", "jia"]已经被splice截取</span>
+    </p>
+    <p class="desc">
+        const a15 = ['a','b','c','d'];
+        console.info("a15",a15.<span class="red">unshift('jia','jia','jia','jia'));//8 返回数组长度,可以无限加</span>
+        console.info("a15",a15)<span class="red">// ["jia", "jia", "jia", "jia", "a", "b", "c", "d"]</span>
     </p>
 </body>
 </html>
