--- a/js/array.html
+++ b/js/array.html
@@ -74,15 +74,45 @@
     console.info("a15",a15.unshift('jia','jia','jia','jia'));//8 返回数组长度,可以无限加
     console.info("a15",a15)// ["jia", "jia", "jia", "jia", "a", "b", "c", "d"]
 
+    const a16 = ['a','b','c','d'];
+    const index = 1;
+    console.info(a16[index]);//b
+
+    const a17 = ['a','b','c','d'];
+    const a18=a17.map((v,k)=>{
+        return v+"ww";
+    })
+    console.info(a17)//["a", "b", "c", "d"]
+    console.info(a18);//["aww", "bww", "cww", "dww"]
+
+    const a19 = ['a','b','c','d'];
+    const a20 = a19.forEach((v,k)=>{
+        console.info(v);
+        return v+"ss"
+    })
+    console.info(a19)//["a", "b", "c", "d"]
+    console.info(a20)//undefined
+
+    const a21 = [1,2,3,4];
+    const a22 = a21.filter((v,k)=>{
+        return v<3;
+    })
+    console.info(a21)//[1, 2, 3, 4]
+    console.info(a22)//[1, 2]
 </script>
 <body>
     <p class="desc">
+        1、合并数组
+
         let arr1 = ['a','b'];
         let arr2 = ['c','d'];
         console.info(arr1.<span class="red">concat</span> (arr2));//浅拷贝，如果数组是对象，则只拷贝引用
         console.info(<span class="red">[...arr1,...arr2]</span>);//浅拷贝，如果数组是对象，则只拷贝引用
     </p>
+    <p>------------------------------------------------------------------------</p>
     <p class="desc">
+        2、复制的指针、克隆数组对象,为什么const变量会被方法改变，因为const只让指针不变
+
         const a1 = [1, 2];
         <span class="red">const a2 = a1;//复制指针</span>
         a2[0] = 2;
@@ -95,7 +125,10 @@
         console.info(a4);<span class="red">//[1, 2]</span>
         console.info(a5);<span class="red">// [1, 2]</span>
     </p>
+    <p>------------------------------------------------------------------------</p>
     <p class="desc">
+        3、获取数组的key、value
+
         const a6=['a','b','c','d','e','f'];
         for (let index of a6.<span class="red">keys()</span>) {
         console.log(index);<span class="red">//0、1、2、3、4、5</span>
@@ -107,13 +140,19 @@
         console.log(index, elem);<span class="red">//0 "a"  1 "b"  2 "c"  3 "d"  4 "e" 5 "f"</span>
         }
     </p>
+    <p>------------------------------------------------------------------------</p>
     <p class="desc">
+        4、是否包含某元素
+
         const a7=['a','b','c','d','e','f'];
         console.info(a7.<span class="red">includes('a')</span>)//true
         console.info(a7.<span class="red">includes('abc')</span>)//false
         }
     </p>
+    <p>------------------------------------------------------------------------</p>
     <p class="desc">
+        5、删除最后一个
+
         const a9 = ['a','b',10];
         console.info(a9.<span class="red">pop());//10,返回删除的那个</span>
         console.info(a9);<span class="red">//["a", "b"] const a9也可以改变</span>
@@ -121,37 +160,97 @@
         const s = 'abcde';
         console.info(s.<span class="red">toUpperCase());//ABCD const s也可以改变</span>
     </p>
+    <p>------------------------------------------------------------------------</p>
     <p class="desc">
+        6、数组、字符串方法操作后，指针没变，对象变了
+
         const a10 = ['a','b',10];
         console.info("a10",a10.<span class="red">push('c'));//4，返回最新的长度</span>
         console.info(a10.<span class="red">push('d','e','f','g'));//8</span>
         console.info(a10);<span class="red">// ["a", "b", 10, "c", "d", "e", "f", "g"]</span>
     </p>
+    <p>------------------------------------------------------------------------</p>
     <p class="desc">
+        7、颠倒数组
+
         const a11 = ['a','b',10];
         console.info("a11",a11.<span class="red">reverse());// [10, "b", "a"]直接返回结果</span>
         console.info("a11",<span class="red">a11);// [10, "b", "a"]</span>
     </p>
+    <p>------------------------------------------------------------------------</p>
     <p class="desc">
+        8、删除第一个
+
         const a12 = ['a','b',10];
         console.info("a12",a12.<span class="red">shift());// a，返回删除的那个，删除第一个</span>
         console.info("a12",<span class="red">a12);// ["b", 10]</span>
     </p>
+    <p>------------------------------------------------------------------------</p>
     <p class="desc">
+        9、裁剪数组
+
         const a13 = ['a','b','c','d','e'];
         console.info("a13",a13.<span class="red">slice(2));// ["c", "d", "e"]</span>
         console.info("a13",a13.<span class="red">slice(2,4));// ["c", "d"]</span>
         console.info("a13",a13);<span class="red">//被裁剪的数组值没变["a", "b", "c", "d", "e"]</span>
     </p>
+    <p>------------------------------------------------------------------------</p>
     <p class="desc">
+        10、截取位置、截取长度、添加数组
+
         const a14 = ['a','b','c','d'];
         console.info("a14",a14.<span class="red">splice(1,3,'jia'));//["b", "c", "d"]，返回删除元素；从1开始，删3个，增加一个jia，</span>
         console.info("a14",a14);<span class="red">//["a", "jia"]已经被splice截取</span>
     </p>
+    <p>------------------------------------------------------------------------</p>
     <p class="desc">
+        11、从数组开头加入无限个值。
+
         const a15 = ['a','b','c','d'];
         console.info("a15",a15.<span class="red">unshift('jia','jia','jia','jia'));//8 返回数组长度,可以无限加</span>
         console.info("a15",a15)<span class="red">// ["jia", "jia", "jia", "jia", "a", "b", "c", "d"]</span>
+    </p>
+    <p>------------------------------------------------------------------------</p>
+    <p class="desc">
+        12、a[变量]获取值
+
+        const a16 = ['a','b','c','d'];
+        const index = 1;
+        console.info(a16<span class="red">[index]);//b </span>
+    </p>
+    <p>------------------------------------------------------------------------</p>
+    <p class="desc">
+       13、 map返回新数组，react常用的循环,
+
+        const a17 = ['a','b','c','d'];
+        const a18=a17.<span class="red">map((v,k)=>{
+        return v+"ww";
+        })</span>
+        console.info(a17)<span class="red">//["a", "b", "c", "d"]</span>
+        console.info(a18);<span class="red">//["aww", "bww", "cww", "dww"]</span>
+    </p>
+    <p>------------------------------------------------------------------------</p>
+    <p class="desc">
+       14、 forEach不返回新数组
+
+        const a19 = ['a','b','c','d'];
+        const a20 = a19.<span class="red">forEach((v,k)=>{
+        console.info(v);
+        return v+"ss"
+        })</span>
+        console.info(a19)<span class="red">//["a", "b", "c", "d"]</span>
+        console.info(a20)<span class="red">//undefined</span>
+    </p>
+    <p>------------------------------------------------------------------------</p>
+    <p class="desc">
+       15、 filter过滤器
+
+        const a21 = [1,2,3,4];
+        const a22 = a21.<span class="red">filter((v,k)=>{
+            return v<3;
+        })</span>
+        console.info(a21)<span class="red">//[1, 2, 3, 4]</span>
+        console.info(a22)<span class="red">//[1, 2]</span>
     </p>
 </body>
 </html>
