--- a/js/index.html
+++ b/js/index.html
@@ -21,11 +21,15 @@
     function gotoArray(){
        self.location='array.html';
     }
+    function gotoObject(){
+       self.location='object.html';
+    }
 </script>
 <body>
 <div class="gotoArrayString" onclick="gotoArrayString()">跳转到String</div>
 <div class="gotoNull" onclick="gotoNull()">跳转到判断null</div>
 <div class="gotoArray" onclick="gotoArray()">跳转到array</div>
+<div class="gotoObject" onclick="gotoObject()">跳转到object</div>
     1、（）=》｛｝和普通方法区别
     <p class="desc">
         <span class="green">abc()</span>  <span class="red">//打印abc</span>
