--- a/js/index.html
+++ b/js/index.html
@@ -24,12 +24,20 @@
     function gotoObject(){
        self.location='object.html';
     }
+    function gotoPromise(){
+       self.location='promise.html';
+    }
+    function gotoasync(){
+       self.location='async.html';
+    }
 </script>
 <body>
 <div class="gotoArrayString" onclick="gotoArrayString()">跳转到String</div>
 <div class="gotoNull" onclick="gotoNull()">跳转到判断null</div>
 <div class="gotoArray" onclick="gotoArray()">跳转到array</div>
 <div class="gotoObject" onclick="gotoObject()">跳转到object</div>
+<div class="gotoPromise" onclick="gotoPromise()">跳转到Promise</div>
+<div class="gotoasync" onclick="gotoasync()">跳转到async</div>
     1、（）=》｛｝和普通方法区别
     <p class="desc">
         <span class="green">abc()</span>  <span class="red">//打印abc</span>
