--- a/js/index.html
+++ b/js/index.html
@@ -30,6 +30,9 @@
     function gotoasync(){
        self.location='async.html';
     }
+    function gotoThis(){
+       self.location='this.html';
+    }
 </script>
 <body>
 <div class="gotoArrayString" onclick="gotoArrayString()">跳转到String</div>
@@ -38,6 +41,7 @@
 <div class="gotoObject" onclick="gotoObject()">跳转到object</div>
 <div class="gotoPromise" onclick="gotoPromise()">跳转到Promise</div>
 <div class="gotoasync" onclick="gotoasync()">跳转到async</div>
+<div class="gotoThis" onclick="gotoThis()">跳转到This</div>
     1、（）=》｛｝和普通方法区别
     <p class="desc">
         <span class="green">abc()</span>  <span class="red">//打印abc</span>
