--- a/js/index.html
+++ b/js/index.html
@@ -33,6 +33,9 @@
     function gotoThis(){
        self.location='this.html';
     }
+    function gotoBindCallApply(){
+       self.location='bindCallApply.html';
+    }
 </script>
 <body>
 <div class="gotoArrayString" onclick="gotoArrayString()">跳转到String</div>
@@ -42,6 +45,7 @@
 <div class="gotoPromise" onclick="gotoPromise()">跳转到Promise</div>
 <div class="gotoasync" onclick="gotoasync()">跳转到async</div>
 <div class="gotoThis" onclick="gotoThis()">跳转到This</div>
+<div class="gotoBindCallApply" onclick="gotoBindCallApply()">跳转到bindCallApply</div>
     1、（）=》｛｝和普通方法区别
     <p class="desc">
         <span class="green">abc()</span>  <span class="red">//打印abc</span>
