--- a/js/index.html
+++ b/js/index.html
@@ -36,6 +36,9 @@
     function gotoBindCallApply(){
        self.location='bindCallApply.html';
     }
+    function gotoBiBao(){
+       self.location='闭包.html';
+    }
 </script>
 <body>
 <div class="gotoArrayString" onclick="gotoArrayString()">跳转到String</div>
@@ -46,6 +49,7 @@
 <div class="gotoasync" onclick="gotoasync()">跳转到async</div>
 <div class="gotoThis" onclick="gotoThis()">跳转到This</div>
 <div class="gotoBindCallApply" onclick="gotoBindCallApply()">跳转到bindCallApply</div>
+<div class="gotoBiBao" onclick="gotoBiBao()">跳转到闭包</div>
     1、（）=》｛｝和普通方法区别
     <p class="desc">
         <span class="green">abc()</span>  <span class="red">//打印abc</span>
