--- a/js/闭包.html
+++ b/js/闭包.html
@@ -7,7 +7,9 @@
 </head>
 <script></script>
 <body>
-    <p class="desc"></p>
+    <p class="desc">
+        JavaScript 允许函数嵌套，内部函数可访问外部函数的变量和函数，以及外部函数能访问的所有变量和函数。
+    </p>
 <p>-----------------------------------------------------------------------</p>
     <p class="desc"></p>
     <p>-----------------------------------------------------------------------</p>
