--- a/webpack/duo-ye-mian/src/search/index.html
+++ b/webpack/duo-ye-mian/src/search/index.html
@@ -3,6 +3,9 @@
 <head>
     <%= require('raw-loader!./meta.html') %>
     <script><%= require('raw-loader!babel-loader!../../node_modules/lib-flexible/flexible.js') %></script>
+    <!--<script type="text/javascript" src="https://now8.gtimg.com/now/lib/16.2.0/react.min.js"></script>-->
+    <!--<script type="text/javascript" src="https://now8.gtimg.com/now/lib/16.2.0/react-dom.min.js"></script>-->
+    <script><%= require('raw-loader!babel-loader!../../build//library/library.dll.js') %></script>
     <title>searchTitle</title>
 
 
