--- a/js/null.html
+++ b/js/null.html
@@ -71,12 +71,24 @@
     }else{
         console.info("array1[]当array为false")
     }
-
+    let array2 = [];
+    if(!!array2){
+        console.info("array2[]为true")
+    }else{
+        console.info("array2[]当array为false")
+    }
     let object1={};
     if(object1){
         console.info("object1{}为true")
     }else{
         console.info("object1{}为false")
+    }
+
+    let object2={};
+    if(!!object2){
+        console.info("object2{}为true")
+    }else{
+        console.info("object2{}为false")
     }
 </script>
 <body>
