--- a/js/index.html
+++ b/js/index.html
@@ -45,6 +45,18 @@
    function gotoHttp(){
        self.location='http.html';
    }
+   function gotoPanDuan(){
+       self.location='判断类型.html';
+   }
+   function gotoShenKaoBei(){
+       self.location='深拷贝.html';
+   }
+   function gotoWeiLei(){
+       self.location='伪类伪元素.html';
+   }
+   function gotoBFC(){
+       self.location='BFC.html';
+   }
 </script>
 <body>
 <div class="gotoArrayString" onclick="gotoArrayString()">跳转到String</div>
@@ -58,6 +70,10 @@
 <div class="gotoBiBao" onclick="gotoBiBao()">跳转到闭包</div>
 <div class="gotoEventMaoPao" onclick="gotoEventMaoPao()">事件冒泡</div>
 <div class="gotoHttp" onclick="gotoHttp()">HTTP</div>
+<div class="gotoPanDuan" onclick="gotoPanDuan()">判断类型</div>
+<div class="gotoShenKaoBei" onclick="gotoShenKaoBei()">深拷贝</div>
+<div class="gotoWeiLei" onclick="gotoWeiLei()">伪类伪元素</div>
+<div class="gotoBFC" onclick="gotoBFC()">BFC</div>
     1、（）=》｛｝和普通方法区别
     <p class="desc">
         <span class="green">abc()</span>  <span class="red">//打印abc</span>
