--- a/js/index.html
+++ b/js/index.html
@@ -85,6 +85,7 @@
         <span class="green">abcd</span> = ()=>{
             console.info('abcd')
         }
+        <span class="green">abcd()</span>  <span class="red">//这里可以执行</span>
     </p>
     <p>---------------------------------------------------------------------------------------</p>
     2、循环后的变量
