--- a/js/this.html
+++ b/js/this.html
@@ -13,6 +13,7 @@
         return this;
     }
     f1();
+    new f1();
 
     function f2(){
         "use strict";
@@ -35,6 +36,7 @@
     <p>------------------------------------------------------------</p>
     <p class="desc">
         f1();
+        new f1();//指向f1对象
         function f1(){
             console.info(this);<span class="red">//window 或者node里的global</span>
             return this;
