--- a/js/判断类型.html
+++ b/js/判断类型.html
@@ -6,6 +6,8 @@
     <title>Title</title>
 </head>
 <script>
+    console.log(typeof(undefined));//undefined
+    console.log(typeof(null));//object
     let number1 = 1;
     let string1 = "string";
     let boolean1 = false;
@@ -57,6 +59,8 @@
 </script>
 <body>
 <p class="desc">
+    console.log(typeof(undefined));//undefined
+    console.log(typeof(null));//object
     基本typeof能分出来的。
     Number（数字）
     String（字符串）
@@ -64,6 +68,7 @@
     Function（函数）
     Object（对象）
     Symbol（ES2015 新增）
+    undefine
 
     详细分
     Number（数字）
