--- a/js/index.html
+++ b/js/index.html
@@ -57,6 +57,9 @@
    function gotoBFC(){
        self.location='原型链.html';
    }
+   function gotoSwitch(){
+       self.location='switch使用return.html';
+   }
 </script>
 <body>
 <div class="gotoArrayString" onclick="gotoArrayString()">跳转到String</div>
@@ -74,6 +77,7 @@
 <div class="gotoShenKaoBei" onclick="gotoShenKaoBei()">深拷贝</div>
 <div class="gotoWeiLei" onclick="gotoWeiLei()">伪类伪元素</div>
 <div class="gotoBFC" onclick="gotoBFC()">原型链</div>
+<div class="gotoSwitch" onclick="gotoSwitch()">switch使用return</div>
     1、（）=》｛｝和普通方法区别
     <p class="desc">
         <span class="red">new</span> abc();<span class="red"> //打印abc，new后this指向abc{}</span>
