--- a/js/null.html
+++ b/js/null.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="css/index.css" />
 <head>
     <meta charset="UTF-8">
-    <title>Title你大爷12</title>
+    <title>Title我修改了第一次，等待第二次修改冲突</title>
 </head>
 <script>
     let abc;//undefined
