--- a/js/array.html
+++ b/js/array.html
@@ -117,6 +117,22 @@
     }
     const a24 = flat(a23);
     console.info(a24)//[1, 2, 3, 4, 5]
+
+    const a25 = [1,2,3,4,5,6];
+    //去除偶数
+    let a26 = a25.filter((item,index) => index%2 === 0);
+    // let a26 = a25.findIndex(function(value, index, arr) {
+    //   if(index%2 === 0){
+    //     console.info('偶数')
+    //     return false
+    //   }else{
+    //     console.info('奇数')
+    //     return true
+    //   }
+    // })
+    console.info("a26a26a26a26a26a26a26a26a26a26",a26)//[1,3,5]
+    console.info("a25a25a25a25a25a25a25a25a25a25",a25)//[1,2,3,4,5,6];
+
 </script>
 <body>
     <p class="desc">
